# fusion-panel

./: .gitignore  FUSION_RESEARCH.md  README.md  config.example.yaml  config.yaml.example  pyproject.toml  start-fusion-panel.sh  start-fusion-server.sh
examples/: request.json  tool_request.json
src/trajectory_fusion/: config.py  engine.py  json_utils.py  openai_client.py  prompts.py  responses.py  server.py  tools.py
tests/: test_smoke.py
