[project]
name = "fusion-panel"
version = "0.1.0"
description = "OpenAI-compatible primary-anchored multi-model fusion proxy."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
fusion-panel = "trajectory_fusion.server:main"
trajectory-fusion = "trajectory_fusion.server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trajectory_fusion"]
